WKAPI does not have any APIs to set cookie path to WKWebsiteDataStoreConfigurationRef https://bugs.webkit.org/show_bug.cgi?id=232336

Reviewed by Alex Christensen.

Add cookie-path setting API for WKWebasiteDataStoreConfigurationRef.

Source/WebKit:

Test: CookieStorageFile.CustomPath

* UIProcess/API/C/WKWebsiteDataStoreConfigurationRef.cpp:
(WKWebsiteDataStoreConfigurationCopyCookieStorageFile):
(WKWebsiteDataStoreConfigurationSetCookieStorageFile):
* UIProcess/API/C/WKWebsiteDataStoreConfigurationRef.h:
* UIProcess/WebsiteData/curl/WebsiteDataStoreCurl.cpp:
(WebKit::WebsiteDataStore::platformSetNetworkParameters):

Tools:

* TestWebKitAPI/PlatformPlayStation.cmake:
* TestWebKitAPI/PlatformWin.cmake:
* TestWebKitAPI/Tests/WebKit/CookieStorageFile.cpp: Added.
(TestWebKitAPI::didFinishNavigation):
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/243664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285020 268f45cc-cd09-0410-ab3c-d52691b4dbfc