Source/WebKit/UIProcess/API/C/WKWebsiteDataStoreConfigurationRef.cpp
@@ -140,6 +140,16 @@ void WKWebsiteDataStoreConfigurationSetServiceWorkerRegistrationDirectory(WKWebs
     WebKit::toImpl(configuration)->setServiceWorkerRegistrationDirectory(WebKit::toImpl(directory)->string());
 }
 
+WKStringRef WKWebsiteDataStoreConfigurationCopyCookieStorageFile(WKWebsiteDataStoreConfigurationRef configuration)
+{
+    return WebKit::toCopiedAPI(WebKit::toImpl(configuration)->cookieStorageFile());
+}
+
+void WKWebsiteDataStoreConfigurationSetCookieStorageFile(WKWebsiteDataStoreConfigurationRef configuration, WKStringRef cookieStorageFile)
+{
+    WebKit::toImpl(configuration)->setCookieStorageFile(WebKit::toImpl(cookieStorageFile)->string());
+}
+
 uint64_t WKWebsiteDataStoreConfigurationGetPerOriginStorageQuota(WKWebsiteDataStoreConfigurationRef configuration)
 {
     return WebKit::toImpl(configuration)->perOriginStorageQuota();
