Tools/TestWebKitAPI/PlatformPlayStation.cmake
@@ -29,6 +29,8 @@ if (ENABLE_WEBKIT)
     list(APPEND TestWebKit_SOURCES
         ${test_main_SOURCES}
 
+        Tests/WebKit/CookieStorageFile.cpp
+
         Tests/WebKit/curl/Certificates.cpp
 
         generic/UtilitiesGeneric.cpp
